# celesify

./: .envrc.template  .gitignore  .instructions.md  .task-features  CLAUDE.md  DEPLOYMENT.md  KAGGLE_ENVRC_SETUP.md  README.md  TRAINING_MODULE_ARCHITECTURE.md  TRAINING_QUICK_REFERENCE.md  Taskfile.yml  copilot-instructions.md  docker-compose.yml  pyproject.toml  setup_artifacts.py  streamlit_app.py
.devcontainer/: devcontainer.json  postCreate.sh  postCreate.sh.new
.streamlit/: config.toml
celesify/: __init__.py
celesify/core/: __init__.py  constants.py  json_utils.py  logging.py  paths.py
celesify/preprocessing/: cleaning.py  exports.py  features.py  loading.py  main.py  pipeline.py
celesify/streamlit_app/: __init__.py  app.py  common.py  main.py  page_data_explorer.py  page_performance_metrics.py  page_upload_infer.py
celesify/training/: config.py  data_handling.py  evaluation.py  export.py  main.py  model_training.py  pipeline.py  reporting.py  training.py  utils.py
services/preprocessing/: Dockerfile  preprocess.py  requirements.txt
services/streamlit/: Dockerfile  app.py  requirements.txt
services/training/: Dockerfile  requirements.txt  train.py
