[project]
name = "celesify"
version = "0.1.0"
description = "Stellar classification pipeline with modular services"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pyarrow==16.1.0",
]

[project.optional-dependencies]
preprocessing = [
  "kaggle==1.7.4.5",
]
training-core = [
  "imbalanced-learn==0.12.3",
  "joblib==1.4.2",
  "scikit-learn==1.5.1",
]
training-onnx = [
  "onnx==1.21.0",
  "onnxruntime==1.21.0",
  "skl2onnx==1.20.0",
]
streamlit = [
  "joblib==1.4.2",
  "matplotlib==3.8.4",
  "plotly==5.24.1",
  "scikit-learn==1.5.1",
  "seaborn==0.13.2",
  "streamlit==1.33.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["celesify"]

[tool.rye]
managed = true

[tool.rye.scripts]
preprocess = "python -m celesify.preprocessing.main"
train = "python -m celesify.training.main"
streamlit-app = "python -m streamlit run celesify/streamlit_app/main.py --server.address=0.0.0.0 --server.port=8501"
